--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Keelana Char</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,8 +17,9 @@
 						<img class="photo" src="../images/cartoon.png">
 						<div class="content">
 							<div class="inner">
-								<h1>Keelana Char</h1>
-								<p>Pharmacy Technician // Software Engineer</p>
+								<h1>Aloha! I'm Keelana</h1>
+								<h3>Pharmacy Technician // Web Developer</h3>
+								<p>"A person who has never made a mistake, never tried anything new."<br>- <i>Albert Einstein</i></p>
 							</div>
 						</div>
 						<nav>
@@ -43,15 +39,14 @@
 						<article id="about">
 							<h2 class="major">About</h2>
 							<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-							<p>Aloha!</p>
+							<p>My time working in pharmacy has taught me much about attention to detail, time management, and communication. As a Web Developer I seek to use all of these attributes and more to build functional and elegant web applications to meet the needs of any user.</p>
 						</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>With culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
 							</article>
 
 						<!-- Contact -->
@@ -78,16 +73,14 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/keelana/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/kchar92" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
-						<!-- Elements -->
+						Elements
 							<article id="elements">
-								<h2 class="major">Elements</h2>
+								<h2 class="major">oooohohh</h2>
 
 								<section>
 									<h3 class="major">Text</h3>
@@ -144,8 +137,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
