--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 								</ul>
 							</article>
 
-						Elements
+						<!-- Elements -->
 							<article id="elements">
-								<h2 class="major">oooohohh</h2>
+								<h2 class="major">Elements</h2>
 
 								<section>
 									<h3 class="major">Text</h3>
