contact form working

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>With culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
+								<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form id="contact-form" method="post" action="https://formspree.io/xdogazyo">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
