--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 							<ul>
 								<li><a href="#about">About</a></li>
 								<li><a href="#work">Work</a></li>
+								<li><a href="#hobbies">Hobbies</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -42,12 +42,21 @@
 							<p>My time working in pharmacy has taught me much about attention to detail, time management, and communication. As a Web Developer I seek to use all of these attributes and more to build functional and elegant web applications to meet the needs of any user.</p>
 						</article>
 
+
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
 							</article>
+
+								<!-- Hobbies -->
+								<article id="hobbies">
+									<h2 class="major">Hobbies</h2>
+									<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+									<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
+								</article>
+
 
 						<!-- Contact -->
 							<article id="contact">
@@ -72,6 +81,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
+
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/keelana/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/kchar92" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
