--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Keelana Char</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -19,7 +20,7 @@
 							<div class="inner">
 								<h1>Aloha! I'm Keelana</h1>
 								<h3>Pharmacy Technician // Web Developer</h3>
-								<p>"A person who has never made a mistake, never tried anything new."<br>- <i>Albert Einstein</i></p>
+								<p>"A person who has never made a mistake, has never tried anything new."<br>- <i>Albert Einstein</i></p>
 							</div>
 						</div>
 						<nav>
@@ -38,7 +39,9 @@
 						<!-- About -->
 						<article id="about">
 							<h2 class="major">About</h2>
-							<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+							<span class="image main">
+								<img src="../images/orig.jpg" alt="" />
+							</span>
 							<p>My time working in pharmacy has taught me much about attention to detail, time management, and communication. As a Web Developer I seek to use all of these attributes and more to build functional and elegant web applications to meet the needs of any user.</p>
 						</article>
 
@@ -46,16 +49,59 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
+								<span class="image main">
+									<a href="https://github.com/kchar92/kickstands_up">
+										<div class="container">
+											<img src="../images/capstone.png" alt="" class="image" style="width:100%">
+											<div class="middle">
+												<div class="text">GitHub</div>
+											</div>
+										</div>
+									</a>
+								</span>
+								<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few <b>APIs</b> such as Google maps and MapQuest. It also it includes a bit of web scraping with Nokogiri.</p>
 							</article>
 
-								<!-- Hobbies -->
-								<article id="hobbies">
-									<h2 class="major">Hobbies</h2>
-									<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-									<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few APIs and RubyGems such as <i>Google maps (to display the start, end and route of each ride), Geocoder, MapQuest (to find exact coordinates) & Nokogiri (for web scraping data)</i>.</p>
-								</article>
+							<!-- Hobbies -->
+							<article id="hobbies">
+								<h2 class="major">Hobbies</h2>
+								<span class="image main">
+									<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+										<div class="carousel-inner">
+											<div class="carousel-item active" data-interval="3000">
+												<img src="../images/whiteplains.jpg" class="d-block w-100" alt="...">
+											</div>
+											<div class="carousel-item" data-interval="3000">
+												<img src="../images/hike.jpg" class="d-block w-100" alt="...">
+											</div>
+											<div class="carousel-item" data-interval="3000">
+												<img src="../images/sis.jpg" class="d-block w-100" alt="...">
+											</div>
+											<div class="carousel-item">
+												<img src="../images/hikeview.jpg" class="d-block w-100" alt="...">
+											</div>
+											<div class="carousel-item">
+												<img src="../images/rainbowbike.jpg" class="d-block w-100" alt="...">
+											</div>
+											<div class="carousel-item">
+												<img src="../images/wekfest.jpg" class="d-block w-100" alt="...">
+											</div>
+											<div class="carousel-item">
+												<img src="../images/laview.jpg" class="d-block w-100" alt="...">
+											</div>
+										</div>
+										<a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+											<span class="sr-only">Previous</span>
+										</a>
+										<a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+											<span class="carousel-control-next-icon" aria-hidden="true"></span>
+											<span class="sr-only">Next</span>
+										</a>
+									</div>
+								</span>
+								<p>Born and raised in Hawai'i I naturally have a love for being outdoors whether its hiking, going to the beach, riding my motorcycle or traveling. I always enjoy seeing and doing new things!</p>
+							</article>
 
 
 						<!-- Contact -->
@@ -341,6 +387,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<div id="bg"></div>
 
 		<!-- Scripts -->
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
