fixed photo carousel issue

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 									<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
 										<div class="carousel-inner">
 											<div class="carousel-item active" data-interval="3000">
-												<img src="../images/whiteplains.jpg" class="d-block w-100" alt="...">
+												<img src="../images/whiteplains.JPG" class="d-block w-100" alt="...">
 											</div>
 											<div class="carousel-item" data-interval="3000">
 												<img src="../images/hike.jpg" class="d-block w-100" alt="...">
 											</div>
 											<div class="carousel-item" data-interval="3000">
-												<img src="../images/sis.jpg" class="d-block w-100" alt="...">
+												<img src="../images/sis.JPG" class="d-block w-100" alt="...">
 											</div>
 											<div class="carousel-item">
 												<img src="../images/hikeview.jpg" class="d-block w-100" alt="...">
