last carousel photo issue

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 												<img src="../images/hikeview.jpg" class="d-block w-100" alt="...">
 											</div>
 											<div class="carousel-item">
-												<img src="../images/rainbowbike.jpg" class="d-block w-100" alt="...">
+												<img src="../images/rainbowbike.JPG" class="d-block w-100" alt="...">
 											</div>
 											<div class="carousel-item">
 												<img src="../images/wekfest.jpg" class="d-block w-100" alt="...">
