--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -59,7 +60,20 @@
 										</div>
 									</a>
 								</span>
-								<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few <b>APIs</b> such as Google maps and MapQuest. It also it includes a bit of web scraping with Nokogiri.</p>
+								<div class="dev-icons">
+									<i id="prog-icon" class="devicon-ruby-plain colored"></i>
+									<i id="prog-icon" class="devicon-rails-plain colored"></i>
+									<i id="prog-icon" class="devicon-git-plain colored"></i>
+									<i id="prog-icon" class="devicon-vuejs-plain colored"></i>
+									<i id="prog-icon" class="devicon-html5-plain colored"></i>
+									<i id="prog-icon" class="devicon-css3-plain colored"></i>
+									<i id="prog-icon" class="devicon-javascript-plain colored"></i>
+									<i id="prog-icon" class="devicon-bootstrap-plain colored"></i>
+								</div>
+								<br>
+								<div>
+									<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few <b>APIs</b> such as Google maps and MapQuest. It also it includes a bit of web scraping with Nokogiri.</p>
+								</div>	
 							</article>
 
 							<!-- Hobbies -->
