More details to work/capstone page

--- a/index.html
+++ b/index.html
@@ -61,18 +61,42 @@
 									<i id="prog-icon" class="devicon-bootstrap-plain colored"></i>
 								</div>
 								<span class="image main">
-									<a href="https://github.com/kchar92/kickstands_up">
-										<div class="container">
-											<img src="../images/capstone.png" alt="" class="image" style="width:100%">
-											<div class="middle">
-												<div class="text">GitHub</div>
-											</div>
-										</div>
-									</a>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/Vv4dhZwND_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</span>
 								<div>
+									<div></div>
 									<p>With the culmination of the skills I learned at Actualize I built: KickstandsUp. The web application is targeted at fellow motorcycle riders, to give a way to track rides that they are going on and to see other rides going on that they may want to join. KickstandsUp utilizes a <b>Rails</b> backend, <b>PostgreSQL</b> database, a <b>VueJS</b> frontend as well as a few <b>APIs</b> such as Google maps and MapQuest. It also it includes a bit of web scraping with Nokogiri.</p>
-								</div>	
+								</div>
+								<div class="overflow">
+									<div class="hvrbox">
+										<img src="../images/schemacode.png" class="hvrbox-layer_bottom" width="100%">
+										<div class="hvrbox-layer_top">
+											<div class="hvrbox-text">
+												<h2>Backend</h2>
+												<p>Web scraping using Nokogiri</p>
+											</div>
+										</div>
+									</div>
+									<div class="hvrbox">
+										<img src="../images/ridescontroller.png" class="hvrbox-layer_bottom" width="100%">
+										<div class="hvrbox-layer_top">
+											<div class="hvrbox-text">
+												<h2>Backend</h2>
+												<p>Rides create and update actions</p>
+											</div>
+										</div>
+									</div>
+									<div class="hvrbox">
+										<img src="../images/googlemaps.png" class="hvrbox-layer_bottom" width="100%">
+										<div class="hvrbox-layer_top">
+											<div class="hvrbox-text">
+												<h2>Frontend</h2>
+												<p>Using Googlemaps Directions API to show the route.</p>
+											</div>
+										</div>
+									</div>
+										
+								</div>
 							</article>
 
 							<!-- Hobbies -->
