edit hobbies photo carousel

--- a/index.html
+++ b/index.html
@@ -114,27 +114,19 @@
 											<div class="carousel-item" data-interval="2000">
 												<img src="../images/sis.JPG" class="d-block w-100" alt="...">
 											</div>
-											<div class="carousel-item">
+											<div class="carousel-item" data-interval="2000">
 												<img src="../images/hikeview.jpg" class="d-block w-100" alt="...">
 											</div>
-											<div class="carousel-item">
+											<div class="carousel-item" data-interval="2000">
 												<img src="../images/rainbowbike.JPG" class="d-block w-100" alt="...">
 											</div>
-											<div class="carousel-item">
+											<div class="carousel-item" data-interval="2000">
 												<img src="../images/wekfest.jpg" class="d-block w-100" alt="...">
 											</div>
-											<div class="carousel-item">
+											<div class="carousel-item" data-interval="2000">
 												<img src="../images/laview.jpg" class="d-block w-100" alt="...">
 											</div>
 										</div>
-										<a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-											<span class="sr-only">Previous</span>
-										</a>
-										<a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-											<span class="carousel-control-next-icon" aria-hidden="true"></span>
-											<span class="sr-only">Next</span>
-										</a>
 									</div>
 								</span>
 								<p>Born and raised in Hawai'i I naturally have a love for being outdoors whether its hiking, going to the beach, riding my motorcycle or traveling. I always enjoy seeing and doing new things!</p>
